--- a/roles/manage_basic_packages/meta/main.yml
+++ b/roles/manage_basic_packages/meta/main.yml
@@ -1,7 +1,6 @@
----
 galaxy_info:
   author: Semenov Nikolay
-  description: Manage users
+  description: Manage (Install and/or remove) packages
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,9 +13,9 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+#  license: license (GPL-2.0-or-later, MIT, etc)
 
-  min_ansible_version: "2.9"
+  min_ansible_version: 2.9
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
